--- a/scripts/settings.cfg
+++ b/scripts/settings.cfg
@@ -1,9 +1,16 @@
 ##########################################################################################################################################################
-MACHINE=""
-DOMAINE=""
+# CONFIGURATION BASIQUE #
+#########################
+MACHINE="PI3"
+DOMAINE="LAN.LOCAL"
 
-NET_IF+=""
-NET_IP=""
-NET_MASK=""
-NET_GW=""
-NET_DNS=""
+
+##########################################################################################################################################################
+# CONFIGURATION DU RESEAU #
+###########################
+NET_IF="eth0"
+NET_IP="192.168.20.2/24"
+NET_GW="192.168.0.1"
+NET_DNS1="192.168.0.1"
+NET_DNS2="8.8.8.8"
+
