--- a/scripts/settings.cfg
+++ b/scripts/settings.cfg
@@ -1,11 +1,4 @@
 ##########################################################################################################################################################
-# CONFIGURATION BASIQUE #
-#########################
-MACHINE="PI3"
-DOMAINE="LAN.LOCAL"
-
-
-##########################################################################################################################################################
 # CONFIGURATION DU RESEAU #
 ###########################
 NET_IF="eth0"
@@ -14,3 +7,18 @@ NET_GW="192.168.0.1"
 NET_DNS1="192.168.0.1"
 NET_DNS2="8.8.8.8"
 
+##########################################################################################################################################################
+# CONFIGURATION BASIQUE #
+#########################
+MACHINE="PI3"
+DOMAINE="LAN.LOCAL"
+
+##########################################################################################################################################################
+# DISQUE-DUR #
+##############
+HDD_MEDIA_2=""
+HDD_MEDIA_3=""
+HDD_MEDIA_4=""
+HDD_MEDIA_5=""
+HDD_MEDIA_6=""
+HDD_MEDIA_7=""
