--- a/scripts/settings.cfg
+++ b/scripts/settings.cfg
@@ -1,24 +1,16 @@
 ##########################################################################################################################################################
 # CONFIGURATION DU RESEAU #
 ###########################
-NET_IF="eth0"
-NET_IP="192.168.20.2/24"
-NET_GW="192.168.0.1"
-NET_DNS1="192.168.0.1"
-NET_DNS2="8.8.8.8"
+NET_IF='eth0'
+NET_IP='192.168.20.2/24'
+NET_GW='192.168.0.1'
+NET_DNS1='192.168.0.1'
+NET_DNS2='8.8.8.8v
 
 ##########################################################################################################################################################
 # CONFIGURATION BASIQUE #
 #########################
-MACHINE="PI3"
-DOMAINE="LAN.LOCAL"
-
-##########################################################################################################################################################
-# DISQUE-DUR #
-##############
-HDD_MEDIA_2=""
-HDD_MEDIA_3=""
-HDD_MEDIA_4=""
-HDD_MEDIA_5=""
-HDD_MEDIA_6=""
-HDD_MEDIA_7=""
+HOST_NAME='PI3'
+HOST_DOM='LAN.LOCAL'
+HOST_USER='marc'
+HOST_PASS='admin'
